--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 <distributionManagement>
  <id>releases</id>
     <!-- CHANGE HERE by your team nexus server -->
-    <url>http://192.168.238.135/:8081/repository/maven-releases/</url>
+    <url>http://192.168.238.135:8081/repository/maven-releases/</url>
   </repository>
   <snapshotRepository>
     <id>snapshots</id>
